# Dora-AI

./: ai_agent.py  main.py  pyproject.toml  pyvenv.cfg  speech_to_text.py  text_to_speech.py  tool.py
